--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,9 +4,29 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --swiper-theme-color: #F8B319;
+  // //////////
+  --swiper-pagination-color: var(--swiper-theme-color);
+  --swiper-pagination-bullet-size: 20px;
+  --swiper-pagination-bullet-width: 10px;
+  --swiper-pagination-bullet-height: 10px;
+  --swiper-pagination-bullet-inactive-color: #fff;
+  --swiper-pagination-bullet-inactive-opacity: 9;
+  --swiper-pagination-bullet-opacity: 1;
+  --swiper-pagination-bullet-horizontal-gap: 3px;
+  --swiper-pagination-bullet-vertical-gap: 6px;
+}
+
 html,
 body {
   height: 100%;
   font-family: 'Lato', sans-serif;
   background-color: #000;
+}
+
+
+// Swiper override
+.swiper-pagination {
+  margin-bottom: 2em!important;
 }
